--- a/src/app/user/layouts/sidebar/sidbar.component.html
+++ b/src/app/user/layouts/sidebar/sidbar.component.html
@@ -1,5 +1,5 @@
  <!--  BEGIN SIDEBAR  -->
- <div class="sidebar-wrapper sidebar-theme">
+<div class="sidebar-wrapper sidebar-theme">
 
     <nav id="sidebar">
 
@@ -11,7 +11,7 @@
                     </a>
                 </div>
                 <div class="nav-item theme-text">
-                    <a href="./index.html" class="nav-link"> CORK </a>
+                    <a href="./index.html" class="nav-link"> Árt </a>
                 </div>
             </div>
             <div class="nav-item sidebar-toggle">
@@ -22,32 +22,22 @@
         </div>
         <div class="shadow-bottom"></div>
         <ul class="list-unstyled menu-categories" id="accordionExample">
-            <li class="menu">
-                <a href="#dashboard" data-bs-toggle="dropdown" aria-expanded="false" class="dropdown-toggle">
+            <li class="menu active">
+                <a [routerLink]="['/home']" aria-expanded="false" class="dropdown-toggle">
                     <div class="">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
-                        <span>Dashboard</span>
-                    </div>
-                    <div>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
+                        <span>Home</span>
                     </div>
                 </a>
-                <ul class="dropdown-menu submenu list-unstyled" id="dashboard" data-bs-parent="#accordionExample">
-                    <li>
-                        <a href="./index.html"> Analytics </a>
-                    </li>
-                    <li>
-                        <a href="./index2.html"> Sales </a>
-                    </li>
-                </ul>
+                <ul class="dropdown-menu submenu list-unstyled" id="apps" data-bs-parent="#accordionExample">
+                </ul>           
             </li>
-
-            <li class="menu menu-heading">
+            <!-- <li class="menu menu-heading">
                 <div class="heading"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-minus"><line x1="5" y1="12" x2="19" y2="12"></line></svg><span>APPLICATIONS</span></div>
             </li>
 
             <li class="menu">
-                <a href="#apps" data-bs-toggle="dropdown" aria-expanded="true" class="dropdown-toggle">
+                <a href="#apps" data-bs-toggle="dropdown" aria-expanded="false" class="dropdown-toggle">
                     <div class="">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-cpu"><rect x="4" y="4" width="16" height="16" rx="2" ry="2"></rect><rect x="9" y="9" width="6" height="6"></rect><line x1="9" y1="1" x2="9" y2="4"></line><line x1="15" y1="1" x2="15" y2="4"></line><line x1="9" y1="20" x2="9" y2="23"></line><line x1="15" y1="20" x2="15" y2="23"></line><line x1="20" y1="9" x2="23" y2="9"></line><line x1="20" y1="14" x2="23" y2="14"></line><line x1="1" y1="9" x2="4" y2="9"></line><line x1="1" y1="14" x2="4" y2="14"></line></svg>
                         <span>Apps</span>
@@ -115,10 +105,10 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="sub-submenu dropend active">
-                        <a href="#blog" data-bs-toggle="dropdown" aria-expanded="true" class="dropdown-toggle collapsed">Blog <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg> </a>
+                    <li class="sub-submenu dropend">
+                        <a href="#blog" data-bs-toggle="dropdown" aria-expanded="false" class="dropdown-toggle collapsed">Blog <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg> </a>
                         <ul class="dropdown-menu list-unstyled sub-submenu" id="blog" data-bs-parent="#apps"> 
-                            <li class="active">
+                            <li>
                                 <a href="./app-blog-grid.html"> Grid </a>
                             </li>
                             <li>
@@ -517,7 +507,7 @@
                     </li>
                     
                 </ul>
-            </li>
+            </li> -->
 
         </ul>
         
