--- a/src/app/user/layouts/theme/layouts.component.html
+++ b/src/app/user/layouts/theme/layouts.component.html
@@ -19,12 +19,19 @@
 
             <div class="middle-content container-xxl p-0">
                 <div class="page-meta">
-                    <nav class="breadcrumb-style-one" aria-label="breadcrumb">
+                    <nav class="breadcrumb-style-four" aria-label="breadcrumb">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Blog</li>
+                            <li class="breadcrumb-item">
+                                <a [routerLink]="['/home']">
+                                    <span class="mb-3">  
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
+                                    </span>
+                                    <span class="inner-text">Home</span>
+                                </a>
+                            </li>
+                            <li class="breadcrumb-item active" aria-current="page">Page</li>
                         </ol>
-                    </nav>
+                    </nav>                    
                 </div>
                 <router-outlet></router-outlet>
             </div>
