--- a/src/app/user/components/home.component.html
+++ b/src/app/user/components/home.component.html
@@ -26,19 +26,6 @@
 <div class="row">
 
     <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-4 col-sm-6 mb-4">
-        <!-- <a class="card" [routerLink]="['product-details']" target="_blank">
-            <img src="../src/assets/img/product-2.jpg" class="card-img-top" alt="...">
-            <div class="card-footer">
-                <div class="row">
-                    <div class="col-6">
-                        <b>Avocado</b>
-                    </div>
-                    <div class="col-6 text-end">
-                        <p class="text-success mb-0">$100.00</p>
-                    </div>
-                </div>
-            </div>
-        </a> -->
         <div class="card style-2 mb-md-0 mb-4">
             <a [routerLink]="['product-details']" >
                 <img src="../src/assets/img/grid-blog-style-2.jpeg" class="card-img-top" alt="...">
@@ -69,15 +56,30 @@
     </div>
 
     <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-4 col-sm-6 mb-4">
-        <a href="./app-blog-post.html" class="card style-2 mb-md-0 mb-4">
-            <img src="../src/assets/img/grid-blog-style-1.jpg" class="card-img-top" alt="...">
-            <div class="card-body px-0 pb-0">
-                <h5 class="card-title mb-3">The ideal work from home office setup</h5>
-                <div class="media mt-4 mb-0 pt-1">
-                    <img src="../src/assets/img/profile-2.jpeg" class="card-media-image me-3" alt="">
-                    <div class="media-body">
-                        <h4 class="media-heading mb-1">Vanessa Kirby</h4>
-                        <p class="media-text">02 May</p>
+        <a class="card style-2 mb-md-0 mb-4" href="javascript:void(0);" [routerLink]="['product-details']">
+            <span class="badge badge-danger"></span>
+            <img src="../src/assets/img/product-4.jpg" class="card-img-top" alt="...">
+            <div class="card-footer">
+                <div class="row">
+                    <div class="col-12 mb-4">
+                        <h2><b>Camera</b></h2>
+                    </div>
+                    <div class="col-6">
+                        <div class="reviews">
+                            <h1 class="mb-0">4.88</h1>
+                            <div class="stars mt-3 mb-sm-0 mb-4">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2" fill="#e2a03f" style="color: #e2a03f;"></polygon></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2" fill="#e2a03f" style="color: #e2a03f;"></polygon></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2" fill="#e2a03f" style="color: #e2a03f;"></polygon></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2" fill="#e2a03f" style="color: #e2a03f;"></polygon></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star empty-star"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 text-end">
+                        <div class="pricing d-flex justify-content-end">
+                            <h4 class="text-success mb-0">$95.00</h4>
+                        </div>
                     </div>
                 </div>
             </div>
