--- a/src/app/user/layouts/footer/user-footer.component.html
+++ b/src/app/user/layouts/footer/user-footer.component.html
@@ -3,7 +3,7 @@
     <div class="footer-section f-section-1">
     </div>
     <div class="footer-section f-section-2">
-        <p class="">Coded with Tank KBKTM<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg></p>
+        <p style="font-size: 20px;">Coded with Tank KBKTM <img src="../src/assets/img/KBKTM.png" width="50" height="50"></p>
     </div>
 </div>
 <!--  END CONTENT AREA  -->
