--- a/src/app/user/components/home.component.html
+++ b/src/app/user/components/home.component.html
@@ -40,11 +40,11 @@
             </div>
         </a> -->
         <div class="card style-2 mb-md-0 mb-4">
-            <a [routerLink]="['product-details']" >
+            <a [routerLink]="['/product-details']" >
                 <img src="../src/assets/img/grid-blog-style-2.jpeg" class="card-img-top" alt="...">
             </a>
             <div class="card-body px-0 pb-0">
-                <a [routerLink]="['product-details']" >
+                <a [routerLink]="['/product-details']" >
                     <h5 class="card-title mb-3">14 Tips to improve your photography</h5>
                 </a>
                 <div class="media mt-4 mb-0 pt-1">
