them login register va fix bug js lan thu n

--- a/src/app/user/components/home.component.html
+++ b/src/app/user/components/home.component.html
@@ -27,7 +27,7 @@
 
     <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-4 col-sm-6 mb-4">
         <div class="card style-2 mb-md-0 mb-4">
-            <a [routerLink]="['/product-details']" appReloadPage>
+            <a [routerLink]="['../product-details']" appReloadPage>
                 <img src="../src/assets/img/grid-blog-style-2.jpeg" class="card-img-top" alt="...">
             </a>
             <div class="card-body px-0 pb-0">
@@ -35,11 +35,11 @@
                     <h5 class="card-title mb-3">14 Tips to improve your photography</h5>
                 </a>
                 <div class="media mt-4 mb-0 pt-1">
-                    <a [routerLink]="['profile']" appReloadPage>
+                    <a [routerLink]="['../profile']" appReloadPage>
                         <img src="../src/assets/img/profile-5.jpeg" class="card-media-image me-3" alt="">
                     </a>
                     <div class="media-body">
-                        <a [routerLink]="['profile']">
+                        <a [routerLink]="['../profile']">
                             <h4 class="media-heading mb-1">Shaun Park</h4>
                             <p class="media-text">01 May</p>
                         </a>
@@ -56,7 +56,7 @@
     </div>
 
     <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-4 col-sm-6 mb-4">
-        <a class="card style-2 mb-md-0 mb-4" href="javascript:void(0);" [routerLink]="['/product-details']">
+        <a class="card style-2 mb-md-0 mb-4" href="javascript:void(0);" [routerLink]="['../product-details']">
             <span class="badge badge-danger"></span>
             <img src="../src/assets/img/product-4.jpg" class="card-img-top" alt="...">
             <div class="card-footer">
