--- a/src/app/user/layouts/header/user-header.component.html
+++ b/src/app/user/layouts/header/user-header.component.html
@@ -4,12 +4,12 @@
     
     <ul class="navbar-item theme-brand flex-row  text-center">
         <li class="nav-item theme-logo">
-            <a [routerLink]="['/home']" appReloadPage>
+            <a [routerLink]="['home']" appReloadPage>
                 <img src="../src/assets/img/logo2.svg" class="navbar-logo" alt="logo">
             </a>
         </li>
         <li class="nav-item theme-text">
-            <a [routerLink]="['/home']" appReloadPage class="nav-link"> Árt </a>
+            <a [routerLink]="['home']" appReloadPage class="nav-link"> Árt </a>
         </li>
     </ul>
 
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="dropdown-item">
-                    <a [routerLink]="['/profile']">
+                    <a [routerLink]="['profile']">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg> <span>Profile</span>
                     </a>
                 </div>
