fix loi linh tinh

--- a/src/app/user/components/product/home.component.html
+++ b/src/app/user/components/product/home.component.html
@@ -32,10 +32,10 @@
             </a>
             <div class="card-body px-0 pb-0">
                 <div class="row">
-                    <a [routerLink]="['product-details']" class="col-6">
+                    <a [routerLink]="['../product-details']" class="col-6">
                         <h4 class="card-title mb-0">Photography</h4>
                     </a>
-                    <a [routerLink]="['product-details']" class="col-6 text-end">
+                    <a [routerLink]="['../product-details']" class="col-6 text-end">
                         <h4 class="mb-1 mt-2 m-lg-6"><b>$2100.00</b></h4>
                     </a>
                 </div>
