--- a/src/app/user/components/profile/profile.component.html
+++ b/src/app/user/components/profile/profile.component.html
@@ -171,7 +171,7 @@
 
                     <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12">
                         <div class="summary layout-spacing ">
-                            <div class="widget-content widget-content-area">
+                            <div class="widget-content widget-content-area" style="height: 303px;">
                                 <h3 class="">Interest</h3>
                                 <div class="order-summary">
 
