--- a/src/app/user/components/profile/profile-edit.component.html
+++ b/src/app/user/components/profile/profile-edit.component.html
@@ -57,7 +57,7 @@
 
                                                         <div class="col-md-6">
                                                             <div class="form-group">
-                                                                <label style="font-weight: 600;" for="country">Country</label>
+                                                                <label style="font-weight: 600;" for="country">Profession</label>
                                                                 <select class="form-select mb-3" id="country">
                                                                     <option selected>Buyer</option>
                                                                     <option>Seller</option>
