--- a/src/app/admin/layouts/layouts/admin.component.html
+++ b/src/app/admin/layouts/layouts/admin.component.html
@@ -13,9 +13,7 @@
 
     <!--  BEGIN SIDEBAR  -->
     <div class="sidebar-wrapper sidebar-theme">
-
-        <admin-sidebar></admin-sidebar>
-
+        <admin-sidebar addActives></admin-sidebar>
     </div>
     <!--  END SIDEBAR  -->
 
