--- a/src/app/admin/layouts/sidebar/admin-sidbar.component.html
+++ b/src/app/admin/layouts/sidebar/admin-sidbar.component.html
@@ -19,7 +19,7 @@
     </div>
     <div class="shadow-bottom"></div>
     <ul class="list-unstyled menu-categories" id="accordionExample">
-        <li class="menu active">
+        <li class="menu ">
             <a [routerLink]="['dashboard']" data-bs-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                 <div class="">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
@@ -43,7 +43,7 @@
             <div class="heading"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-minus"><line x1="5" y1="12" x2="19" y2="12"></line></svg><span>APPLICATIONS</span></div>
         </li>
 
-        <li class="menu">
+        <li class='menu active'>
             <a [routerLink]="['calendar']" aria-expanded="false" class="dropdown-toggle">
                 <div class="">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>
@@ -406,7 +406,7 @@
                 <!-- <li>
                     <a href="./table-datatable-custom.html"> Custom </a>
                 </li> -->
-                <li>
+                <li  class="">
                     <a [routerLink]="['user-list']">Buyer List</a>
                 </li>
                 <li>
