add table user-list

--- a/public/src/plugins/css/dark/filepond/custom-filepond.css
+++ b/public/src/plugins/css/dark/filepond/custom-filepond.css
@@ -41,16 +41,16 @@ body.dark .filepond--root .filepond--drop-label, body.dark .filepond--drip, body
   border-radius: 9px;
 }
 body.dark .filepond--file, body.dark .filepond--file-action-button {
-  background-color: #060818 !important;
+  background-color: transparent !important; 
 }
 body.dark .filepond--file-info {
-  background-color: #060818 !important;
+  background-color: transparent !important;
 }
 body.dark .filepond--file-info .filepond--file-info-main {
-  background-color: #060818 !important;
+  background-color: transparent !important;
 }
 body.dark .filepond--file .filepond--file-status {
-  background-color: #060818 !important;
+  background-color: transparent !important;
 }
 body.dark [data-filepond-item-state=processing-complete] .filepond--item-panel {
   background-color: #369763 !important;
