--- a/src/app/admin/components/user-list/seller-list.component.html
+++ b/src/app/admin/components/user-list/seller-list.component.html
@@ -10,7 +10,7 @@
 <!-- /BREADCRUMB -->
 
 <div class="seperator-header layout-top-spacing">
-    <h4 class="">Basic Table</h4>
+    <h4 class="">Basic Table Seller</h4>
 </div>
 
 <div class="row layout-spacing">
@@ -493,7 +493,7 @@
 </div>
 
 <div class="seperator-header layout-top-spacing">
-    <h4 class="">Show/ Hide Columns</h4>
+    <h4 class="">Show/ Hide Columns Seller</h4>
 </div>
 
 <div class="row layout-spacing">
@@ -970,14 +970,14 @@
                         </tr>
                     </tbody>
                     <tfoot>
-                        <tr>
+                        <!-- <tr>
                             <th>Name</th>
                             <th>Position</th>
                             <th>Office</th>
                             <th>Age</th>
                             <th>Start date</th>
                             <th>Salary</th>
-                        </tr>
+                        </tr> -->
                     </tfoot>
                 </table>
             </div>
@@ -986,7 +986,7 @@
 </div>
 
 <div class="seperator-header">
-    <h4 class="">Individual column searching (text inputs)</h4>
+    <h4 class="">Individual column searching (text inputs) Seller</h4>
 </div>
 
 <div class="row layout-spacing">
@@ -1257,7 +1257,7 @@
 </div>
 
 <div class="seperator-header">
-    <h4 class="">Multiple Table</h4>
+    <h4 class="">Multiple Table Seller</h4>
 </div>
 
 <div class="row">
@@ -1711,7 +1711,7 @@
 </div>
 
 <div class="seperator-header">
-    <h4 class="">Range Search</h4>
+    <h4 class="">Range Search Seller</h4>
 </div>
 
 <div class="row">
@@ -2026,7 +2026,7 @@
 </div>
 
 <div class="seperator-header">
-    <h4 class="">HTML5 Export</h4>
+    <h4 class="">HTML5 Export Seller</h4>
 </div>
 
 <div class="row">
@@ -2926,7 +2926,7 @@
 </div>
 
 <div class="seperator-header">
-    <h4 class="">Live Dom Ordering</h4>
+    <h4 class="">Live Dom Ordering Seller</h4>
 </div>
 
 <div class="row">
