Add login vs Signup Admin

--- a/Admin/ArtGalleryManagementAdmin/src/app/admin/login/login.component.html
+++ b/Admin/ArtGalleryManagementAdmin/src/app/admin/login/login.component.html
@@ -10,14 +10,14 @@
 
                         <div class="row">
                             <div style="text-align: center;" class="col-md-12 mb-3">
-                                <img height="135px" width="180px" src="../src/assets/img/Art_2.png" alt="">
+                                <img height="135px" width="180px" src="../src/assets/img/logo2.svg" alt="">
                                 <p style="font-size: 20px;">Welcome to a World of Art -</p>
                                 <p style="font-size: 20px;">Where Every Canvas Tells a Story!</p>
                                 <h2 style="font-weight: bold; text-align: center; font-family: Arial, Helvetica, sans-serif;">Admin Login</h2>                                
                             </div>
                             <div class="col-md-12">
                                 <div class="mb-3">
-                                    <label class="form-label">Email</label>
+                                    <label class="form-label">Admin</label>
                                     <input type="email" class="form-control">
                                 </div>
                             </div>
