them Add-to-cart voi contactUs

--- a/src/app/user/layouts/layouts/layouts.component.html
+++ b/src/app/user/layouts/layouts/layouts.component.html
@@ -18,7 +18,7 @@
         <div class="layout-px-spacing">
 
             <div class="middle-content container-xxl p-0">
-                <div class="page-meta">
+                <!-- <div class="page-meta">
                     <nav class="breadcrumb-style-four" aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item">
@@ -32,7 +32,7 @@
                             <li class="breadcrumb-item active" aria-current="page">Page</li>
                         </ol>
                     </nav>                    
-                </div>
+                </div> -->
                 <router-outlet></router-outlet>
             </div>
             
