--- a/src/app/user/layouts/header/user-header.component.html
+++ b/src/app/user/layouts/header/user-header.component.html
@@ -21,7 +21,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x search-close"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
             </div>
         </form>
-        <span class="badge badge-secondary" hidden>Ctrl + /</span>
+        <!-- <span class="badge badge-secondary" hidden>Ctrl + /</span> -->
     </div>
 
     <ul class="navbar-item flex-row ms-lg-auto ms-0 action-area">
@@ -46,10 +46,10 @@
             </a>
         </li>
         <li class="nav-item dropdown notification-dropdown">
-            <button class="btn btn-light-dark _no--effects position-relative btn-icon btn-rounded">
+            <a [routerLink]="['add-to-cart']" class="btn btn-light-dark _no--effects position-relative btn-icon btn-rounded">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
                 <span class="badge badge-danger counter">8</span>
-            </button>
+            </a>
         </li>
 
         <li class="nav-item dropdown user-profile-dropdown  order-lg-0 order-1">
