--- a/src/app/user/layouts/sidebar/sidbar.component.html
+++ b/src/app/user/layouts/sidebar/sidbar.component.html
@@ -32,6 +32,16 @@
                 <ul class="dropdown-menu submenu list-unstyled" id="apps" data-bs-parent="#accordionExample">
                 </ul>           
             </li>
+            <li class="menu active">
+                <a [routerLink]="['contact-us']" aria-expanded="false" class="dropdown-toggle">
+                    <div class="">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
+                        <span>Contac Us</span>
+                    </div>
+                </a>
+                <ul class="dropdown-menu submenu list-unstyled" id="apps" data-bs-parent="#accordionExample">
+                </ul>           
+            </li>
             <!-- <li class="menu menu-heading">
                 <div class="heading"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-minus"><line x1="5" y1="12" x2="19" y2="12"></line></svg><span>APPLICATIONS</span></div>
             </li>
