--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -34,7 +34,7 @@
                         <div class="row">
                             <div class="col-12">
                                 <div  class="mb-4" style="text-align: center;">
-                                   <img style="width: auto; height: 100px;" src="../src/assets/img/Art_2.png" alt="">
+                                   <img style="width: auto; height: 100px;" src="../src/assets/img/logo2.svg" alt="">
                                 </div>
                             </div>
 
